ResourcesView column gap (fixes #2211) (#2244)

--- a/src/app/resources/view-resources/resources-view.scss
+++ b/src/app/resources/view-resources/resources-view.scss
@@ -11,10 +11,12 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-areas: "detail view";
+    grid-column-gap: 1rem;
   }
 
   .full-view-container.view-container {
     grid-template-columns: 0 1fr;
+    grid-column-gap: 0;
   }
 
   .resource-detail {
